# langchain-xinference

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: link.yml  release.yml
docs/: chat.ipynb  llms.ipynb
langchain_xinference/: __init__.py  chat_models.py  embeddings.py  llms.py  reranks.py
scripts/: check_imports.py  lint_imports.sh
tests/integration_tests/: test_chat_models.py  test_llms.py
tests/unit_tests/: test_chat_models.py  test_llms.py
