[project]
authors = []
license = { text = "MIT" }
requires-python = "<4.0,>=3.9"
dependencies = []
name = "langchain-xinference"
version = "0.1.1"
description = "langchain xinference chain"
readme = "README.md"

[project.urls]
repository = "https://github.com/TheSongg/langchain-xinference"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "langchain-xinference"
version = "0.1.1"
description = "An integration package connecting Xinference and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain"
license = "MIT"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain/tree/master/libs/partners/xinference"
"Release Notes" = "https://github.com/langchain-ai/langchain/releases?q=tag%3A%22xinference%3D%3D0%22&expanded=true"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = ">=0.3.15,<0.4.0"
aiohttp = ">=3.8.0,<4.0.0"
xinference-client = ">=1.4.0,<2.0.0"
pydantic = ">=2.10.0,<3.0.0"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-socket = "^0.7.0"
pytest-watcher = "^0.3.4"
langchain-tests = "^0.3.5"

[tool.poetry.group.codespell]
optional = true
[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing]
optional = true
[tool.poetry.group.typing.dependencies]
mypy = "^1.10"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.uv]
root_packages = ["langchain_xinference"]
